# SIZO-UX

./: .gitignore  CMakeLists.txt  README.md  SyntherfaceClient.pro
DrTree/: DrTree.pro  diagramitem.cpp  drgraphcursor.h  jeudetest.h  ondegraphselector.cpp  placementmodel.h  treestyle.cpp
DrTree/dto/: editarrangement.h
Models/: CMakeLists.txt  Models.pro  boio.h  logger.h
OXI_QML/: CMakeLists.txt  arrow.cpp  damodel.cpp  dataobject.cpp  dataobject.h  diagramscene.cpp  drenveloppe.h  drfader.cpp  drgraphconnection.h  drgraphcursor.cpp  drgraphe.cpp  drgraphe.h  drgraphitempart.h  drgraphitemselector.h  drgraphlabel.h  drgraphscene.h  drgraphview.h  dronde.h  drpotard.cpp  drpotard.h  drshape.cpp  drshape.h  drvaleur.cpp  drxy.cpp  drxy.h  dsonde.h  jeudetest.cpp  main.cpp  objectstore.cpp  objectstore.h  ondegraphpart.cpp  ondegraphselector.cpp  ondestore.cpp  rotation.cpp  rotation.h  treevue.cpp  treevue.h
OXI_QML/Models/: iomodel.cpp  treeitem.h  treemodel.cpp
OXI_QML/PianoRoll/: drgantt.cpp  drgantt.h  ganttdata.cpp  ganttdata.h  ganttmodel.h
OXI_QML/QML/: ArbreEnvironnment.qml  EditeurConfig.qml  JsonForm.qml  JsonListEditView.qml  ScopeView.qml
OXI_QML/QML/Controles/: CtrlCigale.qml  CtrlEnveloppe.qml  CtrlFX.qml  CtrlFader.qml  CtrlFiltreMIDI.qml  CtrlMotifInterprete.qml  CtrlPianoRoll.qml  CtrlSequence.qml
OXI_QML/dto/: editable.cpp  editable.h  editcigale.h  editconffloo.h  editconfgoo.h  editinstrument.cpp  editinstrument.h  editondine.cpp  genericdto.h  graphblockdata.cpp  graphblockdata.h
OXI_QML/js/: Helpers.js
QtJson/: CMakeCache.txt  CMakeLists.txt  QtJson.pro  qtjson.cpp  qtjson.h
QtNestedModel/: QtNestedModel.pro  customctrls.cpp  customctrls.h  damodel.h  diagramtextitem.cpp  drenveloppe.cpp  drfader.cpp  drfader.h  drgraphe.cpp  drgraphe.h  dronde.cpp  drpotard.h  drshape.cpp  drshape.h  drvaleur.h  dsonde.cpp  ondestore.h  ressources.qrc  treestyle.h  vuegraph.cpp
QtNestedModel/Models/: iomodel.h  qtoutils.cpp  qtoutils.h  treeitem.cpp  treemodel.h
QtNestedModel/PianoRoll/: ganttmodel.cpp
QtNestedModel/QML/: ActionsDBs.qml  DomaineDef.qml  EditeurListe.qml  JsonTreeView.qml  LauncherDelegate.qml
QtNestedModel/QML/Controles/: CtrlConfigMIDI.qml  CtrlElementsCheck.qml  CtrlGraph.qml  CtrlImpactSynth.qml  CtrlPointEvenement.qml  CtrlResonnanceBand.qml  CtrlRoughness.qml  CtrlSample.qml  CtrlWaveTable.qml
QtNestedModel/dto/: editmotif.h  editondine.h
QtNestedModel/qml/: Composer.qml  Configuration.qml  EditEnveloppe.qml  EditeurCigale.qml  EditeurMotif.qml  JsonDialog.qml  JsonListEditDelegate.qml  JsonMenu.qml  LaucherComponent.qml  LauncherList.qml  MenuConfig.qml  MenuDBs.qml  main.qml
QtNestedModel/qml/Controles/: CtrlBouton.qml  CtrlCibleMidi.qml  CtrlCompound.qml  CtrlConfigAudio.qml  CtrlExciterBand.qml  CtrlMotif.qml  CtrlOperation.qml  CtrlOscillateur.qml  CtrlPotard.qml  CtrlRoutageMIDI.qml  CtrlShape.qml
models/: boio.cpp
